Change greeting from 'Hello World' to 'Goodbye World'

--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -708,8 +708,8 @@
 
   <script>
     // === Configuration ===
-    const SIGNUP_URL = 'http://a16e1708d26e2447fa3e1ec8e2db77e8-1533783915.us-west-2.elb.amazonaws.com/api/signup';
-    const LOGIN_URL  = 'http://a16e1708d26e2447fa3e1ec8e2db77e8-1533783915.us-west-2.elb.amazonaws.com/api/login';
+    const SIGNUP_URL = 'http://af0d4ff3f0e0a4fe1bb894cfef892a2e-1450150433.us-east-1.elb.amazonaws.com/api/signup';
+    const LOGIN_URL  = 'http://af0d4ff3f0e0a4fe1bb894cfef892a2e-1450150433.us-east-1.elb.amazonaws.com/api/login';
 
     const msgBox = document.getElementById("msg");
 
@@ -1005,6 +1005,7 @@
 
 </body>
 </html>
+
 
 
 
