--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -592,7 +592,7 @@
   </div>
 
   <main class="hero-section">
-    <h1>Welcome to the World of Microservices.</h1>
+    <h1>1725 sumanth world of project.</h1>
     <p> A project by  veera sir Multicloud Devops (nareshit).</p>
     <p>Google Pixel 10 series is here. Say hello to your new phone with multicloud devops  veera nareshit.</p>
     <button id="cta-button" class="cta-button">Browse phones</button>
@@ -1005,6 +1005,7 @@
 
 </body>
 </html>
+
 
 
 
